welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: value unary_! is not a member of Unit
  while (!fin()){
         ^ColumnByColumn:23: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^ColumnByColumn:23: warning: enclosing method fin has result type Unit: return value discarded
    return true
    ^ColumnByColumn:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  } else return false
                ^ColumnByColumn:24: warning: enclosing method fin has result type Unit: return value discarded
  } else return false
         ^